2014-01-16  Kaz Kylheku  <kaz@kylheku.com>

	Version 75

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-01-15  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print, obj_pprint): Convert the internal representation
	of @sym and @(expr ...) syntax back to these notations instead
	of leaving them as (sys:var sym) and (sys:expr expr ...).

2014-01-15  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (append_each_s, append_each_star_s): New symbol variables.
	(op_each, expand): Support append-each and append-each*.
	(eval_init): Initialize new symbol variables, and register
	new operators.

	* txr.1: Document append-each and append-each*.

2014-01-14  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Wrote missing documentation for throw, throwf and error.

2014-01-14  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (stdio_seek): After a successful seek, discard the character
	that may have been put back with unget_char.

2014-01-14  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_args): Implemented default values for optional
	arguments.
	(op_defun): Permit the syntax.

	* txr.1: Documented.

2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	Support for pushing back bytes and characters into streams.

	* stream.c (null_ops, stdio_ops, tail_ops, pipe_ops,
	string_in_ops, byte_in_ops, string_out_ops, strlist_out_ops,
	dir_ops, cat_stream_ops): Structure definition updated
	with new initializers for two new virtuals.
	(stdio_handle): New member, unget_c.
	(snarf_line, stdio_get_char): Handle pushed-back character in
	h->unget_c.
	(stdio_unget_char, stdio_unget_byte, string_in_unget_char,
	byte_in_unget_byte): New static functions.
	(make_stdio_stream_common): Initialize unget_c member.
	(unget_char, unget_byte): New functions.

	* stream.h (struct strm_ops): New virtuals: unget_char and unget_byte.
	(unget_char, unget_byte): New functions declared.

	* syslog.c (syslog_strm_ops): Two new initializers.
