@@ -2437,6 +2437,7 @@ void eval_init(void)
   reg_fun(intern(lit("hash-uni"), user_package), func_n2(hash_uni));
   reg_fun(intern(lit("hash-diff"), user_package), func_n2(hash_diff));
   reg_fun(intern(lit("hash-isec"), user_package), func_n2(hash_isec));
+  reg_fun(intern(lit("group-by"), user_package), func_n2v(group_by));
 
   reg_fun(intern(lit("eval"), user_package), func_n2o(eval_intrinsic, 1));
   reg_fun(intern(lit("lisp-parse"), user_package), func_n2o(lisp_parse, 0));
